# campusworld

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml
backend/: .env.example  AGENTS.md  CLAUDE.md  campusworld.py  config_usage_report.txt  environment.yml  pytest.ini
backend/app/: __init__.py  version.py
backend/config/: CLAUDE.md  settings.dev.yaml  settings.dev.yaml.backup  settings.prod.yaml  settings.yaml  tool_router_rules.yaml
backend/db/: CLAUDE.md  init_database.py  migrate_report.py  schema_migrations.py  seed_data.py
backend/docs/: look_command_usage.md
backend/requirements/: agent-tool-eval.txt  base.txt  dev.txt  ml-intent-classifier.txt  monitoring.txt  security.txt  ssh.txt  tool-router-train.txt
backend/scripts/: _logger_zh_fragments.json  audit_command_ability_reconciliation.py  build_tool_router_training_data.py  cleanup_singularity.py  compose_logger_fragment_en_json.py  create_default_accounts.py  diagnose_seed_state.py  export_command_registry_snapshot.py  (+18 more)
campusworld/: .gitignore  CLAUDE.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml
campusworld/client/: README.md  campus.json.example  campus.yaml.example  pyproject.toml  requirements.txt
campusworld/client/campus/: __main__.py  config.py  connection.py  protocol.py  terminal.css  terminal.py
campusworld/client/campus/completers/: __init__.py  command.py
campusworld/client/tests/: conftest.py
client/: pyproject.toml
client/campus/: __init__.py  __main__.py  connection.py
client/tests/: test_config.py  test_connection.py  test_main_login.py  test_protocol.py
docs/: AGENTS.md  README.md  config-migration.md  configuration.md  overview.md  quickstart.md
frontend/: .env.example  .eslintrc.cjs  AGENTS.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate_env_template.sh  manage_config.sh
(+1448 files in other folders)
