[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus"
version = "1.0.0"
description = "CampusWorld CLI Client - Enhanced terminal experience"
authors = [{name = "CampusWorld Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "textual>=0.50.0",
    "websockets>=10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
campus = "campus.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["campus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
