[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus"
version = "1.0.0"
description = "CampusWorld CLI Client - Enhanced terminal experience"
authors = [{name = "CampusWorld Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "textual>=0.50.0",
    "websockets>=10.0",
]

[project.scripts]
campus = "campus.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["campus*"]

[tool.setuptools.package-dir]
"" = "campus"
